# bvh_anim_parser

./: .gitignore  Cargo.toml  LICENSE  README.md  Vicon-sword_attack-0e6d7941-a867-4133-86b9-348542537958 copy.bvh  bvhiomain.py  frame0bvhio.txt  mainblender.py
benches/: my_benchmark.rs
examples/: example.rs  main.rs  test_anim_sword_attack.bvh
src/: bvh_parsing.rs  lib.rs  main.rs  parse.rs  skeleton_drawing.rs  structs.rs  types.rs  utils.rs  visualize.rs
