[package]
name = "bvh_anim_parser"
version = "0.1.0"
edition = "2021"
authors = ["Wojciech Pachowiak <wojtekpaszo@gmail.com>"]
repository = "https://github.com/WojtekPachowiak/bvh-anim-parser"
documentation = "TODO"
readme = "README.md"
description = "A .bvh file parser"
keywords = ["bvh", "biovision", "parser", "animation", "mocap"]
categories = ["parser-implementations", "rendering::data-formats", "mathematics", "game-development"]
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version="0.13.2", features = ["dynamic_linking"], optional=true}
bevy_panorbit_camera = {version="0.17.0", optional=true}
cargo = "0.78.1"
cgmath = "0.18.0"
regex = "1.10.4"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false

[features]
visualize=["dep:bevy", "dep:bevy_panorbit_camera"]


[[example]]
name = "example"
required-features = ["visualize"]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1   

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
